# uxlint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.json
examples/: demo.py  uxlens_locate_anything_colab.ipynb
tests/: test_locate_anything_parse.py  test_rules.py
uxlens/: capture.py
uxlens/locator/: locate_anything.py
uxlint/: __init__.py  audit.py  capture.py  cli.py  report.py  types.py
uxlint/locator/: __init__.py  base.py  locate_anything.py  mock.py
uxlint/rules/: __init__.py  base.py  cta.py  forms.py  trust.py
